--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,12 @@
     -->
     <title>Ai là triệu phú</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Source+Sans+3:wght@200;300;400;600;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <style>
       * {
-        font-family: "Roboto", sans-serif;
+        font-family: "Inter", sans-serif;
         margin: 0;
       }
     </style>
